K8s/base/accounting/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: accountingservice
  labels:
    app: accountingservice
    app.kubernetes.io/version: "1.12.0"
    app.kubernetes.io/part-of: opentelemetry-demo
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: accountingservice
  template:
    metadata:
      labels:
        app: accountingservice
    spec:
      serviceAccountName: accountingservice
      automountServiceAccountToken: false
      containers:
        - name: accountingservice
          image: ghcr.io/open-telemetry/demo:1.12.0-accountingservice
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "50m"
              memory: "60Mi"
            limits:
              cpu: "100m"
              memory: "120Mi"
